--- a/index.html
+++ b/index.html
@@ -50,42 +50,42 @@
                     <div class="me-3">
                         <img src="img/sunrise1.png" alt="sunrise-fajr">
                         <h4 class="my-3">fajr</h4>
-                        <p id="fajr-time">4:53 AM</p>
+                        <p id="fajr-time"></p>
                     </div>
                 </div>
                 <div class="col-lg-2 before col-md-3 col-6">
                     <div class="me-3 ">
                         <img src="img/sunrise.png" alt="sunrise-fajr">
                         <h4 class="my-3">sunrise</h4>
-                        <p id="sunrise-time">4:53 AM</p>
+                        <p id="sunrise-time"></p>
                     </div>
                 </div>
                 <div class="col-lg-2 active  col-md-3 my-2 my-md-0 col-6">
                     <div class="me-3 ">
                         <img src="img/sunny.png" alt="sunrise-fajr">
                         <h4 class="my-3">dhuhr</h4>
-                        <p id="dhuhr-time">4:53 AM</p>
+                        <p id="dhuhr-time"></p>
                     </div>
                 </div>
                 <div class="col-lg-2 before   col-md-3 my-2 my-md-0 col-6">
                     <div class="me-3">
                         <img src="img/sunset.png" alt="sunrise-fajr">
                         <h4 class="my-3">asr</h4>
-                        <p id="asr-time">4:53 AM</p>
+                        <p id="asr-time"></p>
                     </div>
                 </div>
                 <div class="col-lg-2  before  col-md-3 mt-md-3 mt-lg-0 col-6">
                     <div class="me-3">
                         <img src="img/sunset (1).png" alt="sunrise-fajr">
                         <h4 class="my-3">maghrib</h4>
-                        <p id="-time">4:53 AM</p>
+                        <p id="maghrib-time"></p>
                     </div>
                 </div>
                 <div class="col-lg-2  before  col-md-3 mt-md-3 mt-lg-0 col-6">
                     <div class="me-3">
                         <img src="img/sleeping.png" alt="sunrise-fajr">
                         <h4 class="my-3">isha</h4>
-                        <p id="isha-time">4:53 AM</p>
+                        <p id="isha-time"></p>
                     </div>
                 </div>
             </div>
