--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
         <!-- next prayer -->
         <div class="next-remaining-prayertime  d-flex justify-content-around container">
             <p class="next-remaining-prayertime-text" id="next-prayer-text">next prayer</p>
-            <p class="next-remaining-prayertime-name" id="next-prayer-name">fajr</p>
+            <p class="next-remaining-prayertime-name" id="next-prayer-name"></p>
         </div>
         <div class="next-remaining-prayertime  d-flex justify-content-around container">
             <p class="next-remaining-prayertime-text" id="remainig-time-text"> remaining time</p>
-            <p class="next-remaining-prayertime-name" id="remaining-time">1:20:30</p>
+            <p class="next-remaining-prayertime-name" id="remaining-time"></p>
         </div>
         <!-- next prayer -->
 
