--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <p id="sunrise-time"></p>
                     </div>
                 </div>
-                <div class="col-lg-2 active  col-md-3 my-2 my-md-0 col-6">
+                <div class="col-lg-2 before  col-md-3 my-2 my-md-0 col-6">
                     <div class="me-3 ">
                         <img src="img/sunny.png" alt="sunrise-fajr">
                         <h4 class="my-3">dhuhr</h4>
