--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
         <!-- header city and date -->
         <div class="city-date-main">
-            <h1 id="city-main">cairo</h1>
-            <h3 id="date-today">tuesday 22/08/2023</h3>
+            <h1 id="city-main"></h1>
+            <h3 id="date-today"></h3>
         </div>
         <!-- header city and date -->
 
