--- a/index.html
+++ b/index.html
@@ -12,26 +12,17 @@
 
 <body>
 
-
-
-
-
     <!-- main section -->
     <section class="bg-img">
-
         <!-- header city and date -->
         <div class="city-date-main">
             <h1 id="city-main"></h1>
             <h3 id="date-today"></h3>
         </div>
         <!-- header city and date -->
-
-
         <!-- current time -->
         <p id="current-time" class="container rounded"></p>
         <!-- current time -->
-
-
         <!-- next prayer -->
         <div class="next-remaining-prayertime  d-flex justify-content-around container">
             <p class="next-remaining-prayertime-text" id="next-prayer-text">next prayer</p>
@@ -42,7 +33,6 @@
             <p class="next-remaining-prayertime-name" id="remaining-time"></p>
         </div>
         <!-- next prayer -->
-
         <!-- prayer cards -->
         <div id="prayer-cards" class="container">
             <div class="row g-0 mt-5 ms-2 justify-content-around text-center">
@@ -96,22 +86,11 @@
         <form class="container  d-md-flex text-center  justify-content-center">
             <input id="input-city" type="text" class="form-control me-2 " placeholder="Enter city">
             <input id="input-country" type="text" class="form-control my-md-0 my-3  me-2" placeholder="Enter country">
-            <button id="button" type="button" class="btn btn-outline-danger  text-light">Get times</button>
+            <button id="button" type="button" class="btn btn-color  text-light">Get times</button>
         </form>
         <!-- form -->
-
-
-
-
-
     </section>
     <!-- main section -->
-
-
-
-
-
-
     <script src="js/code.jquery.com_jquery-3.7.0.min.js"></script>
     <script src="js/main.js"></script>
 </body>
