--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prayer times</title>
+    <link rel="icon" type="image/x-icon" href="img/prayer-rug.png">
     <link rel="stylesheet" href="css/css bootstrap/bootstrap.min.css">
     <script src="js/js bootstarp/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="css/main.css">
